--- a/index.html
+++ b/index.html
@@ -20,12 +20,12 @@
     - 🌱 I’m currently learning ... Java, JS+React, testing ...
     - 💞️ I’m looking to collaborate on ...
     - 📫 How to reach me: tinyurl.com/yc8c53kw
-    
-    # portfolio
-    ░█▀█░█▀█░█▀▄░▀█▀░█▀▀░█▀█░█░░░▀█▀░█▀█
-    ░█▀▀░█░█░█▀▄░░█░░█▀▀░█░█░█░░░░█░░█░█
-    ░▀░░░▀▀▀░▀░▀░░▀░░▀░░░▀▀▀░▀▀▀░▀▀▀░▀▀▀
-    
+
+    <!-- ░█▀█░█▀█░█▀▄░▀█▀░█▀▀░█▀█░█░░░▀█▀░█▀█ -->
+    <!-- ░█▀▀░█░█░█▀▄░░█░░█▀▀░█░█░█░░░░█░░█░█ -->
+    <!-- ░▀░░░▀▀▀░▀░▀░░▀░░▀░░░▀▀▀░▀▀▀░▀▀▀░▀▀▀ -->
+
+    # 👇 Portfolio
     --------------------------------------------------
     # Python + Django
     <a href="https://github.com/martin-b-07e5/blog1" title="blog1">https://github.com/martin-b-07e5/blog1</a>
