--- a/index.html
+++ b/index.html
@@ -19,36 +19,32 @@
     - 🌱 I learned a little about Python+Django ...
     - 🌱 I’m currently learning ... Java, JS+React, testing ...
     - 💞️ I’m looking to collaborate on ...
-    - 📫 How to reach me: tinyurl.com/yc8c53kw
+    - 📫 How to reach me: <a href="https://tinyurl.com/yc8c53kw" title="email" target="_blank">by email</a>
 
     # 👇 Portfolio
     --------------------------------------------------
     # Python + Django
-    <a href="https://github.com/martin-b-07e5/blog1" title="blog1">https://github.com/martin-b-07e5/blog1</a>
+    <a href="https://github.com/martin-b-07e5/blog1" title="blog1" target="_blank">github.com/martin-b-07e5/blog1</a>
 
     # Python + Django (submitted)
-    <a href="https://github.com/martin-b-07e5/blog_g6" title="blog submitted">https://github.com/martin-b-07e5/blog_g6</a>
+    <a href="https://github.com/martin-b-07e5/blog_g6" title="blog submitted" target="_blank">github.com/martin-b-07e5/blog_g6</a>
 
     # App Usage
     - README.md
     - requirements.txt
     --------------------------------------------------
     # Java exercises
-    https://github.com/martin-b-07e5/java2022/tree/main/src/main/java
+    <a href="https://github.com/martin-b-07e5/java2022/tree/main/src/main/java" title="Java exercises" target="_blank">github.com/martin-b-07e5/java2022/tree/main/src/main/java</a>
+    
     --------------------------------------------------
     # JS practice
-    <a href="https://martin-b-07e5.github.io/tp1" title="tp1">🚀 https://martin-b-07e5.github.io/tp1</a>
-    <a href="https://martin-b-07e5.github.io/tp2" title="tp2">🚀 https://martin-b-07e5.github.io/tp2</a>
+    <a href="https://martin-b-07e5.github.io/tp1" title="tp1" target="_blank">🚀 martin-b-07e5.github.io/tp1</a>
+    <a href="https://martin-b-07e5.github.io/tp2" title="tp2" target="_blank">🚀 martin-b-07e5.github.io/tp2</a>
 
     # React practice
-    <a href="https://martin-b-07e5.github.io/tp4-react" title="movies">👷 https://martin-b-07e5.github.io/tp4-react</a>
+    <a href="https://martin-b-07e5.github.io/tp4-react" title="movies" target="_blank">👷 martin-b-07e5.github.io/tp4-react</a>
     --------------------------------------------------
   </pre>
-  <!-- Optional JavaScript -->
-  <!-- jQuery first, then Popper.js, then Bootstrap JS -->
-  <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
-  <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"></script>
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/js/bootstrap.min.js"></script>
 </body>
 
 </html>
