--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     # presentation
     - 👋 Hi, I’m @martin-b--07e5
     - 👀 I’m interested in ...
-    - 🌱 I learned a little about Python+Django ...
+    - 🌱 I learned a bit about Python+Django ...
     - 🌱 I’m currently learning ... Java, JS+React, testing ...
     - 💞️ I’m looking to collaborate on ...
     - 📫 How to reach me: <a href="https://tinyurl.com/yc8c53kw" title="email" target="_blank">by email</a>
