--- a/index.html
+++ b/index.html
@@ -12,6 +12,18 @@
 
 <body>
   <h1>Portfolio Martín B.</h1>
+  <!-- Armar un portfolio personal (Web Page)
+
+  Que debe contener:
+      - Presentacion (quien Soy , que hago, etc)
+      - Que proyectos hice (Ejemplo: la app del modulo 2 en Django, otros que realice practicando etc):
+      - Descripcion y una fotito de la app (la pagina home u otro.
+      - Contacto: Link de Github, link de redes sociales , etc
+      - Se debe subir a github el HTML y CSS y compartir el repo O el link del portafolio (ver github pages, u otros servicios de web estaticas)
+      Observacion: La actividad es creativa, depende del conocimiento e cada uno. Puede ser de lo mas basico hasta lo mas avanzado. Tampoco dedicar mucho tiempo (ya que deben seguir practicando Spring REST).
+
+   -->
+
   <pre>
     # presentation
     - 👋 Hi, I’m @martin-b--07e5
