--- a/index.html
+++ b/index.html
@@ -5,57 +5,88 @@
   <!-- Required meta tags -->
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-  <title>Portfolio M.B.</title>
+  <title>Portfolio Martín B.</title>
   <!-- Bootstrap CSS -->
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css">
+  <!-- <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css"> -->
+  <!-- 👇 my CSS -->
+  <link rel="stylesheet" href="./index.css">
 </head>
 
+<!-- Armar un portfolio personal (Web Page)
+Que debe contener:
+  ✅- Presentacion (quien Soy , que hago, etc)
+  ✅- Que proyectos hice (Ejemplo: la app del modulo 2 en Django, otros que realice practicando etc):
+  👀- Descripcion y una fotito de la app (la pagina home u otro.
+  ✅- Contacto: Link de Github, link de redes sociales , etc
+  ✅- Se debe subir a github el HTML y CSS y compartir el repo, o el link del portafolio (ver github pages, u otros servicios de web estaticas)
+
+Observacion:
+  La actividad es creativa, depende del conocimiento e cada uno.
+  Puede ser de lo mas basico hasta lo mas avanzado.
+  Tampoco dedicar mucho tiempo (ya que deben seguir practicando Spring REST).-->
+
 <body>
-  <h1>Portfolio Martín B.</h1>
-  <!-- Armar un portfolio personal (Web Page)
-
-  Que debe contener:
-      - Presentacion (quien Soy , que hago, etc)
-      - Que proyectos hice (Ejemplo: la app del modulo 2 en Django, otros que realice practicando etc):
-      - Descripcion y una fotito de la app (la pagina home u otro.
-      - Contacto: Link de Github, link de redes sociales , etc
-      - Se debe subir a github el HTML y CSS y compartir el repo O el link del portafolio (ver github pages, u otros servicios de web estaticas)
-      Observacion: La actividad es creativa, depende del conocimiento e cada uno. Puede ser de lo mas basico hasta lo mas avanzado. Tampoco dedicar mucho tiempo (ya que deben seguir practicando Spring REST).
-
-   -->
-
-  <pre>
-    # presentation
-    - 👋 Hi, I’m @martin-b--07e5
-    - 👀 I’m interested in ...
-    - 🌱 I learned a bit about Python+Django ...
-    - 🌱 I’m currently learning ... Java, JS+React, testing ...
-    - 💞️ I’m looking to collaborate on ...
-    - 📫 How to reach me: <a href="https://tinyurl.com/yc8c53kw" title="email" target="_blank">by email</a>
-
-    # 👇 Portfolio
-    --------------------------------------------------
-    # Python + Django
-    <a href="https://github.com/martin-b-07e5/blog1" title="blog1" target="_blank">github.com/martin-b-07e5/blog1</a>
-
-    # Python + Django (submitted)
-    <a href="https://github.com/martin-b-07e5/blog_g6" title="blog submitted" target="_blank">github.com/martin-b-07e5/blog_g6</a>
-
-    # App Usage
-    - README.md
-    - requirements.txt
-    --------------------------------------------------
-    # Java exercises
-    <a href="https://github.com/martin-b-07e5/java2022/tree/main/src/main/java" title="Java exercises" target="_blank">github.com/martin-b-07e5/java2022/tree/main/src/main/java</a>
-    --------------------------------------------------
-    # JS practice
-    <a href="https://martin-b-07e5.github.io/tp1" title="tp1" target="_blank">🚀 martin-b-07e5.github.io/tp1</a>
-    <a href="https://martin-b-07e5.github.io/tp2" title="tp2" target="_blank">🚀 martin-b-07e5.github.io/tp2</a>
-
-    # React practice
-    <a href="https://martin-b-07e5.github.io/tp4-react" title="movies" target="_blank">👷 martin-b-07e5.github.io/tp4-react</a>
-    --------------------------------------------------
-  </pre>
+  <div class="title">
+    <p>Portfolio.</p>
+  </div>
+  <div class="presentation">
+    <div class="subtitle">
+      <p>Martín Bergagno.</p>
+    </div>
+    <h3> Presentation </h3>
+    <ul>
+      <li>👋 Hi, I’m Martín B. I'm a system analyst but I've always worked mainly as a system administrator.</li>
+      <li>👀 I'm interested in becoming a programmer first, probably backend and then we'll see.</li>
+      <li>🌱 I've been learning a little bit about Python+Django.</li>
+      <li>🌱 I’m currently learning Java, JS+React, testing ...</li>
+      <li>💞️ I’m looking to collaborate on ... (Right now, I don't have time. I'm very busy with this course.)</li>
+      <li>📫 How to reach me: <a href="https://tinyurl.com/yc8c53kw" title="email" target="_blank">by email</a></li>
+      <li>👀 How to see my work: <a href="https://github.com/martin-b-07e5" title="Github account"
+          target="_blank">Follow me on Github</a></li>
+    </ul>
+    <h3>👇 Portfolio</h3>
+    <h4>Python + Django</h4>
+    <ul>
+      <li><a href="https://github.com/martin-b-07e5/blog1" title="blog1"
+          target="_blank">github.com/martin-b-07e5/blog1</a></li>
+    </ul>
+    <h4 class="spacer">Python + Django (submitted)</h4>
+    <ul>
+      <li><a href="https://github.com/martin-b-07e5/blog_g6" title="blog submitted"
+          target="_blank">github.com/martin-b-07e5/blog_g6</a></li>
+    </ul>
+    <h5 title="see the files in the root folder">App Usage</h5>
+    <ul class="x5">
+      <li>README.md</li>
+      <li>requirements.txt</li>
+    </ul>
+    <h4 class="spacer" title="Video realizado por M. Peña">Blog Django</h4>
+    <div style="margin-left: 2rem;">
+      <!-- <p>Following is the video presentation of a blog made with django</p> -->
+      <iframe width="320" height="auto" src="https://www.youtube.com/embed/SZBpDBB1Cw4"
+        title="YouTube video player. Video realizado por Miguel Peña" frameborder="0" allowfullscreen>
+      </iframe>
+    </div>
+    <h4 class="spacer">Java exercises</h4>
+    <ul>
+      <li><a href="https://github.com/martin-b-07e5/java2022/tree/main/src/main/java" title="Java exercises"
+          target="_blank">github.com/martin-b-07e5/java2022/tree/main/src/main/java</a></li>
+    </ul>
+    <h4 class="spacer">JS practice</h4>
+    <ul>
+      <li><a href="https://martin-b-07e5.github.io/tp1" title="tp1" target="_blank">🚀 martin-b-07e5.github.io/tp1</a>
+      </li>
+      <li><a href="https://martin-b-07e5.github.io/tp2" title="tp2" target="_blank">🚀 martin-b-07e5.github.io/tp2</a>
+      </li>
+    </ul>
+    <h4 class="spacer">React practice</h4>
+    <ul>
+      <li><a href="https://martin-b-07e5.github.io/tp4-react" title="movies" target="_blank">👷
+          martin-b-07e5.github.io/tp4-react</a></li>
+    </ul>
+    <div class="spacer"></div>
+    <div class="spacer"></div>
+  </div>
 </body>
 
 </html>
