--- a/index.html
+++ b/index.html
@@ -27,11 +27,11 @@ Observacion:
 
 <body>
   <div class="title">
-    <p>Portfolio.</p>
+    <p>Portfolio</p>
   </div>
   <div class="presentation">
     <div class="subtitle">
-      <p>Martín Bergagno.</p>
+      <p>Martín Bergagno</p>
     </div>
     <h3> Presentation </h3>
     <ul>
