--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@ Observacion:
       <li>requirements.txt</li>
     </ul>
     <h4 class="spacer" title="Video realizado por M. Peña">Blog Django</h4>
-    <div style="margin-left: 2rem;">
+    <div class="videog6">
       <!-- <p>Following is the video presentation of a blog made with django</p> -->
       <iframe width="290" height="auto" src="https://www.youtube.com/embed/SZBpDBB1Cw4"
         title="YouTube video player. Video realizado por Miguel Peña" frameborder="0" allowfullscreen>
