--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@ Observacion:
     <h3> Presentation </h3>
     <ul>
       <li>👋 Hi, I’m Martín B. I'm a system analyst but I've always worked mainly as a system administrator.</li>
-      <li>👀 I'm interested in becoming a programmer first, probably backend and then we'll see.</li>
+      <li>👀 I'm interested, first in becoming a programmer, probably backend, and then we'll see.</li>
       <li>🌱 I've been learning a little bit about Python+Django.</li>
       <li>🌱 I’m currently learning Java, JS+React, testing ...</li>
       <li>💞️ I’m looking to collaborate on ... (Right now, I don't have time. I'm very busy with this course.)</li>
@@ -45,7 +45,7 @@ Observacion:
           target="_blank">Follow me on Github</a></li>
     </ul>
     <h3>👇 Portfolio</h3>
-    <h4>Python + Django</h4>
+    <h4 class="spacer">Python + Django</h4>
     <ul>
       <li><a href="https://github.com/martin-b-07e5/blog1" title="blog1"
           target="_blank">github.com/martin-b-07e5/blog1</a></li>
@@ -62,11 +62,11 @@ Observacion:
     </ul>
     <h4 class="spacer" title="Video realizado por M. Peña">Blog Django</h4>
     <div class="videog6">
-      <!-- <p>Following is the video presentation of a blog made with django</p> -->
-      <iframe width="290" height="auto" src="https://www.youtube.com/embed/SZBpDBB1Cw4"
+      <iframe width="auto" height="auto" src="https://www.youtube.com/embed/SZBpDBB1Cw4"
         title="YouTube video player. Video realizado por Miguel Peña" frameborder="0" allowfullscreen>
       </iframe>
     </div>
+    <div class="spacer"></div>
     <h4 class="spacer">Java exercises</h4>
     <ul>
       <li><a href="https://github.com/martin-b-07e5/java2022/tree/main/src/main/java" title="Java exercises"
@@ -84,7 +84,6 @@ Observacion:
       <li><a href="https://martin-b-07e5.github.io/tp4-react" title="movies" target="_blank">👷
           martin-b-07e5.github.io/tp4-react</a></li>
     </ul>
-    <div class="spacer"></div>
     <div class="spacer"></div>
   </div>
 </body>
