--- a/index.html
+++ b/index.html
@@ -74,9 +74,9 @@ Observacion:
     </ul>
     <h4 class="spacer">JS practice</h4>
     <ul>
-      <li><a href="https://martin-b-07e5.github.io/tp1" title="tp1" target="_blank">🚀 martin-b-07e5.github.io/tp1</a>
+      <li><a href="https://martin-b-07e5.github.io/react2022/tp1" title="tp1" target="_blank">🚀 tp1</a>
       </li>
-      <li><a href="https://martin-b-07e5.github.io/tp2" title="tp2" target="_blank">🚀 martin-b-07e5.github.io/tp2</a>
+      <li><a href="https://martin-b-07e5.github.io/react2022/tp2" title="tp2" target="_blank">🚀 tp2</a>
       </li>
     </ul>
     <h4 class="spacer">React practice</h4>
