--- a/index.html
+++ b/index.html
@@ -47,13 +47,19 @@ Observacion:
     <h3>👇 Portfolio</h3>
     <h4 class="spacer">Python + Django</h4>
     <ul>
-      <li><a href="https://github.com/martin-b-07e5/blog1" title="blog1"
-          target="_blank">github.com/martin-b-07e5/blog1</a></li>
+      <li>
+        <a href="https://github.com/martin-b-07e5/blog1" title="blog1" target="_blank">
+          blog1
+        </a>
+      </li>
     </ul>
     <h4 class="spacer">Python + Django (submitted)</h4>
     <ul>
-      <li><a href="https://github.com/martin-b-07e5/blog_g6" title="blog submitted"
-          target="_blank">github.com/martin-b-07e5/blog_g6</a></li>
+      <li>
+        <a href="https://github.com/martin-b-07e5/blog_g6" title="blog submitted" target="_blank">
+          github.com/martin-b-07e5/blog_g6
+        </a>
+      </li>
     </ul>
     <h5 title="see the files in the root folder">App Usage</h5>
     <ul class="x5">
@@ -62,7 +68,7 @@ Observacion:
     </ul>
     <h4 class="spacer" title="Video realizado por M. Peña">Blog Django</h4>
     <div class="videog6">
-      <iframe width="auto" height="auto" src="https://www.youtube.com/embed/SZBpDBB1Cw4"
+      <iframe width="auto" height="auto" src="https://www.youtube.com/embed/SZBpDBB1Cw4" 
         title="YouTube video player. Video realizado por Miguel Peña" frameborder="0" allowfullscreen>
       </iframe>
     </div>
@@ -74,15 +80,30 @@ Observacion:
     </ul>
     <h4 class="spacer">JS practice</h4>
     <ul>
-      <li><a href="https://martin-b-07e5.github.io/react2022/tp1" title="tp1" target="_blank">🚀 tp1</a>
+      <li>
+        <a href="https://martin-b-07e5.github.io/react2022/tp1" title="tp1" target="_blank">
+          🚀 tp1
+        </a>
       </li>
-      <li><a href="https://martin-b-07e5.github.io/react2022/tp2" title="tp2" target="_blank">🚀 tp2</a>
+      <li>
+        <a href="https://martin-b-07e5.github.io/react2022/tp2" title="tp2" target="_blank">
+          🚀 tp2
+        </a>
       </li>
     </ul>
     <h4 class="spacer">React practice</h4>
     <ul>
-      <li><a href="https://martin-b-07e5.github.io/tp4-react" title="movies" target="_blank">👷
-          martin-b-07e5.github.io/tp4-react</a></li>
+      <li>
+        <a href="https://martin-b-07e5.github.io/movies-react-v6--debounce/" title="movies" target="_blank">
+          🚀 movies-react-v6--debounce/
+        </a>
+      </li>
+      <li>
+        <a href="https://github.com/martin-b-07e5/news-app-v0.2" title="movies" target="_blank">
+          🚀 news-app-v0.2
+        </a>
+      </li>
+
     </ul>
     <div class="spacer"></div>
   </div>
