--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@ Observacion:
     <ul>
       <li>
         <a href="https://github.com/martin-b-07e5/blog1" title="blog1" target="_blank">
-          blog1
+          blog1 (2021-12)
         </a>
       </li>
     </ul>
@@ -57,7 +57,7 @@ Observacion:
     <ul>
       <li>
         <a href="https://github.com/martin-b-07e5/blog_g6" title="blog submitted" target="_blank">
-          github.com/martin-b-07e5/blog_g6
+          blog_g6 (2021-12)
         </a>
       </li>
     </ul>
@@ -75,8 +75,10 @@ Observacion:
     <div class="spacer"></div>
     <h4 class="spacer">Java exercises</h4>
     <ul>
-      <li><a href="https://github.com/martin-b-07e5/java2022/tree/main/src/main/java" title="Java exercises"
-          target="_blank">github.com/martin-b-07e5/java2022/tree/main/src/main/java</a></li>
+      <li>
+        <a href="https://github.com/martin-b-07e5/java2022/tree/main/src/main/java" title="Java exercises" target="_blank">
+          java2022/tree/main/src/main/java</a>
+      </li>
     </ul>
     <h4 class="spacer">JS practice</h4>
     <ul>
