--- a/index.html
+++ b/index.html
@@ -83,12 +83,12 @@ Observacion:
     <h4 class="spacer">JS practice</h4>
     <ul>
       <li>
-        <a href="https://martin-b-07e5.github.io/react2022/tp1" title="tp1" target="_blank">
+        <a href="https://martin-b-07e5.github.io/react2022--tp1-2/tp1/" title="tp1" target="_blank">
           🚀 tp1
         </a>
       </li>
       <li>
-        <a href="https://martin-b-07e5.github.io/react2022/tp2" title="tp2" target="_blank">
+        <a href="https://martin-b-07e5.github.io/react2022--tp1-2/tp2/" title="tp2" target="_blank">
           🚀 tp2
         </a>
       </li>
